--- a/Flexboxindex.HTML
+++ b/Flexboxindex.HTML
@@ -11,19 +11,19 @@
 <body>
   <div class="flex-container">
     <!-- Parent container with the main logo -->
-    <img class="main-logo" src="Dennyastemain.png" alt="Main Logo">
+    <img class="main-logo" src="https://img.freepik.com/free-vector/flat-design-clothing-store-logo-design_23-2149496415.jpg" alt="Main Logo">
 
     <!-- Children container with additional images -->
     <div class="children-container">
       <div class="child-box">
-        <img src="Användden1.jpg" alt="Child Image 1">
+        <img src="https://i.pinimg.com/originals/fb/76/60/fb7660d72cfd8706507059fc35b7418a.jpg" alt="Child Image 1">
         <div class="text-box">
           <p>1750kr st</p>
         </div>
       </div>
 
       <div class="child-box">
-        <img src="Abdimalik2.jpg" alt="Child Image 2">
+        <img src="https://i.pinimg.com/originals/fb/76/60/fb7660d72cfd8706507059fc35b7418a.jpg" alt="Child Image 2">
         <div class="text-box">
           <p>1250kr st</p>
         </div>
