--- a/Flexboxindex.HTML
+++ b/Flexboxindex.HTML
@@ -11,12 +11,12 @@
 <body>
   <div class="flex-container">
     <!-- Parent container with the main logo -->
-    <img class="main-logo" src="https://img.freepik.com/free-vector/flat-design-clothing-store-logo-design_23-2149496415.jpg" alt="Main Logo">
+    <img class="main-logo" src="https://i.pinimg.com/736x/63/d9/1f/63d91f8fe7dacece85d70d7833dff18e.jpg" alt="Main Logo">
 
     <!-- Children container with additional images -->
     <div class="children-container">
       <div class="child-box">
-        <img src="https://i.pinimg.com/originals/fb/76/60/fb7660d72cfd8706507059fc35b7418a.jpg" alt="Child Image 1">
+        <img src="https://i.ebayimg.com/images/g/7bsAAOSw5pxjkUe2/s-l1200.jpg" alt="Child Image 1">
         <div class="text-box">
           <p>1750kr st</p>
         </div>
