--- a/Flexboxindex.HTML
+++ b/Flexboxindex.HTML
@@ -11,7 +11,7 @@
 <body>
   <div class="flex-container">
     <!-- Parent container with the main logo -->
-    <img class="main-logo" src="https://i.pinimg.com/736x/63/d9/1f/63d91f8fe7dacece85d70d7833dff18e.jpg" alt="Main Logo">
+    <img class="main-logo" src="Dennyastemain.png" alt="Main Logo">
 
     <!-- Children container with additional images -->
     <div class="children-container">
